2026-02-02 3.27
    - odstránenie funkcionality, ktorá už viac nie je podporovaná serverom
    - oprava chyby pri získavaní nového prihlasovacieho tokenu

2026-01-14 3.26
    - úprava inicializácie po zmenách v závislostiach doplnku
    - lepšie ošetrenie stavu, keď server vráti nesprávny formát odpovede

2025-11-20 3.25
    - synchronizácia prihlásenia s doplnkom pre kodi

2025-10-21 3.24
    - aktualizácia prihlásenia k SC službe podľa najnovších zmien

2025-07-29 3.23
    - do kontextového menu pre film/seriál pribudla možnosť zobraziť súvisiace filmy/seriály

2025-05-04 3.22
    - úprava prihlásenia k službe

2025-04-28 3.21
    - vylepšený spôsob získavania, obnovy a zálohy prihlasovacieho tokenu

2025-04-28 3.20
    - automatická obnova prihlasovacieho tokenu, ak aktuálny nie je platný

2025-04-25 3.19
    - oprava spustenia pri nezadaných alebo nesprávnych prihlasovacích údajoch

2025-04-25 3.18
    - pridaná autorizácia k SCC serverom
    - pridaná kontrola na existenciu prehrávaných video súborov

2025-04-04 3.17
    - oprava pádov pri chybe v komunikácii s Trakt.tv

2025-02-15 3.16
    - aktualizácia závislostí doplnku

2025-01-07 3.15
    - oprava pádov pri chybe v komunikácii s Trakt.tv

2024-12-28 3.14
    - pridanie vyhľadania do kategórie dokumenty, anime a koncerty
    - pridanie vyhľadávania podľa názvu a mena herca bez ohľadu na typ (nájde filmy aj seriály zároveň)
    - oprava rozšíreného filtrovania dabovaných položiek a položiek s titulkami
    - pridanie vyhľadávania podľa mena herca do kontextového menu

2024-12-01 3.13
    - pridané rozšírené triedenie a filtrovanie dostupné cez kontextové menu
    - umožňuje filtrovať a triediť výsledky podľa rôznych kategórii

2024-08-21 3.12
    - prehrávanie trailerov z youtube cez priame volanie yt doplnku

2024-03-05 3.11
    - nahradenie interného klienta prehraj.to za priame volanie nového prehraj.to doplnku

2024-01-27 3.10
    - pridanie podpory pre virtuálne profily v ArchivCZSK >= 2.5.0
