@@ -1,6 +1,7 @@
 2026-02-02 3.27
     - odstránenie funkcionality, ktorá už viac nie je podporovaná serverom
     - oprava chyby pri získavaní nového prihlasovacieho tokenu
+    - pridanie chýbajúcich položiek do menu po zmenách na strane stream cinema
 
 2026-01-14 3.26
     - úprava inicializácie po zmenách v závislostiach doplnku
